--- a/TccLulu-war/web/incluir_usuario.xhtml
+++ b/TccLulu-war/web/incluir_usuario.xhtml
@@ -3,29 +3,24 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">     
-    <ui:composition template="/padrao.xhtml">
-        <ui:define name="centro">
-            <center margin-top='-200' style="top:-500px;position: relative">
-
-                <h:form id="formulario">
-                    <p:messages autoUpdate="true"/>
-                    <h:panelGrid>
-                        <p:panel header="Incluir USUÁRIOS">
-                            <h:panelGrid columns="2">                             
-                                <h:outputLabel value="Login"/>
-                                <p:inputText id="nome" value="#{usuarioMNG.login}"/> 
-                                <h:outputLabel value="Senha"/>
-                                <p:inputText id="senha" value="#{usuarioMNG.senha}"/>                               
-                                <p:commandButton value="GRAVAR" actionListener="#{usuarioMNG.save}" ajax="false"/>
-                                <p:commandButton value="LIMPAR" type="reset"/> 
-                                <p:commandButton value="CANCELAR" id="cancelar"  action="usuario"/> 
-                            </h:panelGrid>
-
-                        </p:panel> 
-                    </h:panelGrid>
-                </h:form>
-         </center>
-
+    <ui:composition template="/WEB-INF/templates/default.xhtml">
+        <ui:define name="conteudo">
+            <h:form id="formulario">
+                <p:messages autoUpdate="true"/>
+                <h:panelGrid>
+                    <p:panel header="INCLUIR USUÁRIOS">
+                        <h:panelGrid columns="2">                             
+                            <h:outputLabel value="Login"/>
+                            <p:inputText id="nome" value="#{usuarioMNG.login}"/> 
+                            <h:outputLabel value="Senha"/>
+                            <p:inputText id="senha" value="#{usuarioMNG.senha}"/>                               
+                            <p:commandButton value="GRAVAR" actionListener="#{usuarioMNG.save}" ajax="false"/>
+                            <p:commandButton value="LIMPAR" type="reset"/> 
+                            <p:commandButton value="CANCELAR" id="cancelar"  action="usuario"/> 
+                        </h:panelGrid>
+                    </p:panel> 
+                </h:panelGrid>
+            </h:form>
         </ui:define>
     </ui:composition>
 </html>
