--- a/TccLulu-war/web/alterar_setor.xhtml
+++ b/TccLulu-war/web/alterar_setor.xhtml
@@ -5,25 +5,23 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">     
-    <ui:composition template="/padrao.xhtml">
-        <ui:define name="centro">
-            <center margin-top='-200' style="top:-500px;position: relative">
-                <h:form id="formulario">
-                    <p:messages autoUpdate="true"/>
-                    <h:panelGrid>
-                        <h:inputHidden value="#{setorMNG.id}"/> 
-                        <p:panel header="ALTERAR SETOR">
-                            <h:panelGrid columns="2" id="grid">                                                               
-                                <h:outputLabel value="Nome"/>
-                                <p:inputText id="nome" value="#{setorMNG.nome}"/>                                
-                                <p:commandButton value="GRAVAR" actionListener="#{setorMNG.update}" ajax="false" update="grid"/>
-                                <p:commandButton value="LIMPAR" type="reset"/>
-                                <p:commandButton value="CANCELAR" id="cancelar"  action="setor"/>
-                            </h:panelGrid>
-                        </p:panel>
-                    </h:panelGrid> 
-                </h:form>
-            </center>
+    <ui:composition template="/WEB-INF/templates/default.xhtml">
+        <ui:define name="conteudo">         
+            <h:form id="formulario">
+                <p:messages autoUpdate="true"/>
+                <h:panelGrid>
+                    <h:inputHidden value="#{setorMNG.id}"/> 
+                    <p:panel header="ALTERAR SETOR">
+                        <h:panelGrid columns="2" id="grid">                                                               
+                            <h:outputLabel value="Nome"/>
+                            <p:inputText id="nome" value="#{setorMNG.nome}"/>                                
+                            <p:commandButton value="GRAVAR" actionListener="#{setorMNG.update}" ajax="false" update="grid"/>
+                            <p:commandButton value="LIMPAR" type="reset"/>
+                            <p:commandButton value="CANCELAR" id="cancelar"  action="setor"/>
+                        </h:panelGrid>
+                    </p:panel>
+                </h:panelGrid> 
+            </h:form>      
         </ui:define>
     </ui:composition>
 </html>
