--- a/TccLulu-war/web/incluir_monografia.xhtml
+++ b/TccLulu-war/web/incluir_monografia.xhtml
@@ -5,29 +5,26 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">     
-    <ui:composition template="/padrao.xhtml">
-        <ui:define name="centro">
-            <center margin-top='-200' style="top:-500px;position: relative">
-                
-                <h:form id="formulario">
-                    <p:messages autoUpdate="true"/>
-                    <h:panelGrid>
-                        <p:panel header="INCLUIR MONOGRAFIA">
-                            <h:panelGrid columns="2" id="grid">
-                                <h:outputLabel value="Nome"/> 
-                                <p:inputText id="nome" value="#{monografiaMNG.nome}"/>
-                                <h:outputLabel value="Autor"/> 
-                                <p:inputText id="autor" value="#{monografiaMNG.autor}"/>
-                                <h:outputLabel value="Descrição"/> 
-                                <p:inputText id="descricao" value="#{monografiaMNG.descricao}"/>                                
-                                <p:commandButton value="GRAVAR" actionListener="#{monografiaMNG.save}" ajax="false"/>
-                                <p:commandButton value="LIMPAR" type="reset"/>
-                                <p:commandButton value="CANCELAR" id="cancelar"  action="monografia"/> 
-                            </h:panelGrid>
-                        </p:panel>
-                    </h:panelGrid>                             
-                </h:form>                
-            </center>
+    <ui:composition template="/WEB-INF/templates/default.xhtml">
+        <ui:define name="conteudo">                
+            <h:form id="formulario">
+                <p:messages autoUpdate="true"/>
+                <h:panelGrid>
+                    <p:panel header="INCLUIR MONOGRAFIA">
+                        <h:panelGrid columns="2" id="grid">
+                            <h:outputLabel value="Nome"/> 
+                            <p:inputText id="nome" value="#{monografiaMNG.nome}"/>
+                            <h:outputLabel value="Autor"/> 
+                            <p:inputText id="autor" value="#{monografiaMNG.autor}"/>
+                            <h:outputLabel value="Descrição"/> 
+                            <p:inputText id="descricao" value="#{monografiaMNG.descricao}"/>                                
+                            <p:commandButton value="GRAVAR" actionListener="#{monografiaMNG.save}" ajax="false"/>
+                            <p:commandButton value="LIMPAR" type="reset"/>
+                            <p:commandButton value="CANCELAR" id="cancelar"  action="monografia"/> 
+                        </h:panelGrid>
+                    </p:panel>
+                </h:panelGrid>                             
+            </h:form>             
         </ui:define>
     </ui:composition>
 </html>
