--- a/TccLulu-war/web/index.xhtml
+++ b/TccLulu-war/web/index.xhtml
@@ -4,9 +4,8 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">     
     <ui:composition template="/WEB-INF/templates/default.xhtml">
-        <ui:define name="centro">
-            <center margin-top='0' style="top:0px;position: relative">
-                
+        <ui:define name="conteudo">
+            <center margin-top='0' style="top:0px;position: relative">                
                 <h:form id="formulario">
                     <p:messages autoUpdate="true"/>
                     <h:panelGrid>
