--- a/TccLulu-war/web/matriz.xhtml
+++ b/TccLulu-war/web/matriz.xhtml
@@ -5,68 +5,64 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">     
-    <ui:composition template="/padrao.xhtml">
-        <ui:define name="centro">
-            <center margin-top='-200' style="top:-500px;position: relative">
-
-
-                <h:form id="formulario" >
-                    <p:messages autoUpdate="true"/>
-                    <h:panelGrid>
-                        <p:panel header="Matriz de cursos"> 
-                            <h:form>
-                                <p:growl id="growl" life="1000" />     
-                                <p:commandButton value="Incluir" id="incluir"  action="incluir_curso"/>      
-                                <p:commandButton value="Conteúdo" id="conteudo" update="growl" actionListener="#{buttonView.buttonAction}" styleClass="ui-priority-primary" />                                
-                            </h:form>  
-
-                            <p:dataTable id="curso" value="#{cursoMNG.lista}" emptyMessage="Não há registros" var="curso" paginator="true" rows="10" rowKey="#{curso.id}" style="width:800px">
-
-                                <p:column style="width:80px" headerText="Data Inicio">
-                                    <h:outputText value="#{curso.data_inicio}">
-                                        <f:convertDateTime pattern="dd/MM/yyyy"/>
-                                    </h:outputText>
-                                </p:column>
-                                <p:column style="width:80px" headerText="Data Fim">
-                                    <h:outputText value="#{curso.data_fim}">
-                                        <f:convertDateTime pattern="dd/MM/yyyy"/>
-                                    </h:outputText>
-                                </p:column>
-                                <p:column headerText="Nome" filterBy="#{curso.lista}">
-                                    <h:outputText value="#{curso.nome}"/>
-                                </p:column>
-                                <p:column headerText="Sala">
-                                    <h:outputText value="#{curso.sala}"/>
-                                </p:column>
-                                <p:column style="width:45px" headerText="Horas">
-                                    <h:outputText value="#{curso.duracao}"/>
-                                </p:column>
-                                <p:column style="width:45px" headerText="Vagas">
-                                    <h:outputText value="#{curso.qtd_vagas}"/>
-                                </p:column>                           
-                                <p:column  headerText="Público alvo" filterBy="#{cursoMNG.lista}">
-                                    <h:outputText value="#{curso.pub_alvo}"/>
-                                </p:column>
-                                <p:column>
-                                    <p:commandButton value="Editar" action="#{cursoMNG.prepUpdate()}" ajax="false">
-                                        <f:param name="codEditar" value="#{curso.id}"/>                              
-                                    </p:commandButton>
-                                </p:column>
-                                <p:column>
-
-                                    <p:commandButton value="Excluir" title="#{msgs.btRemove}"
-                                                     actionListener="#{cursoMNG.remove()}"                                             
-                                                     onclick="if (!confirm('#{msgs.msgConfRemove}'))
-                                                                 return false" >
-                                        <f:param name="codExcluir" value="#{curso.id}"/>
-                                    </p:commandButton>
-                                </p:column>
-                            </p:dataTable>
-                        </p:panel>
-                    </h:panelGrid>
-                </h:form>
-
-            </center>
+    <ui:composition template="/WEB-INF/templates/default.xhtml">
+        <ui:define name="conteudo">
+            <h:form id="formulario" >
+                <p:messages autoUpdate="true"/>
+                <h:panelGrid>
+                    <p:panel header="MATRIZ DE CURSOS"> 
+                        <h:form>
+                            <p:growl id="growl" life="1000" />     
+                            <p:commandButton value="Incluir" id="incluir"  action="incluir_curso"/>                                            
+                        </h:form> 
+                        <p:dataTable id="curso" value="#{cursoMNG.lista}" emptyMessage="Não há registros" var="curso" paginator="true" rows="10" rowKey="#{curso.id}" style="width:900px">
+                            <p:column style="width:80px" headerText="Data Inicio">
+                                <h:outputText value="#{curso.data_inicio}">
+                                    <f:convertDateTime pattern="dd/MM/yyyy"/>
+                                </h:outputText>
+                            </p:column>
+                            <p:column style="width:80px" headerText="Data Fim">
+                                <h:outputText value="#{curso.data_fim}">
+                                    <f:convertDateTime pattern="dd/MM/yyyy"/>
+                                </h:outputText>
+                            </p:column>
+                            <p:column headerText="Nome" filterBy="#{curso.lista}">
+                                <h:outputText value="#{curso.nome}"/>
+                            </p:column>
+                            <p:column headerText="Sala">
+                                <h:outputText value="#{curso.sala}"/>
+                            </p:column>
+                            <p:column style="width:45px" headerText="Horas">
+                                <h:outputText value="#{curso.duracao}"/>
+                            </p:column>
+                            <p:column style="width:45px" headerText="Vagas">
+                                <h:outputText value="#{curso.qtd_vagas}"/>
+                            </p:column>                           
+                            <p:column  headerText="Público alvo" filterBy="#{cursoMNG.lista}">
+                                <h:outputText value="#{curso.pub_alvo}"/>
+                            </p:column>
+                            <p:column>
+                                <p:commandButton value="Conteúdo" action="incluir_conteudo" ajax="false">
+                                    <f:param name="codEditar" value="#{curso.id}"/>                              
+                                </p:commandButton>
+                            </p:column>
+                            <p:column>
+                                <p:commandButton value="Editar" action="#{cursoMNG.prepUpdate()}" ajax="false">
+                                    <f:param name="codEditar" value="#{curso.id}"/>                              
+                                </p:commandButton>
+                            </p:column>
+                            <p:column>
+                                <p:commandButton value="Excluir" title="#{msgs.btRemove}"
+                                                 actionListener="#{cursoMNG.remove()}"                                             
+                                                 onclick="if (!confirm('#{msgs.msgConfRemove}'))
+                                                             return false" >
+                                    <f:param name="codExcluir" value="#{curso.id}"/>
+                                </p:commandButton>
+                            </p:column>
+                        </p:dataTable>
+                    </p:panel>
+                </h:panelGrid>
+            </h:form>
         </ui:define>
     </ui:composition>
 </html>
