--- a/TccLulu-war/web/monografia.xhtml
+++ b/TccLulu-war/web/monografia.xhtml
@@ -5,50 +5,48 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core"> 
-    <ui:composition template="/padrao.xhtml">
-        <ui:define name="centro">
-            <center margin-top='-200' style="top:-500px;position: relative">
-                <h:form id="formulario">
-                    <p:messages autoUpdate="true"/>
-                    <h:panelGrid>
-                        <p:panel header="CADASTRO DE MONOGRAFIA">
-                            <h:form>
-                                <p:growl id="growl" life="2000" />     
-                                <p:commandButton value="Incluir" id="incluir"  action="incluir_monografia"/>                                        
-                            </h:form>                         
-                            <p:dataTable id="sala" value="#{monografiaMNG.lista}" emptyMessage="Não há registros" var="monografia" paginator="true" rows="4" style="width: 820px">
-                                <p:column headerText="Nome" filterBy="#{monografia.lista}">
-                                    <h:outputText value="#{monografia.nome}"/>
-                                </p:column>
-                                <p:column headerText="Autor" filterBy="#{monografia.lista}">
-                                    <h:outputText value="#{monografia.autor}"/>
-                                </p:column>
-                                <p:column headerText="Descrição">
-                                    <h:outputText value="#{monografia.descricao}"/>
-                                </p:column>
-                                <p:column>
-                                    <p:commandButton value="Editar" action="#{monografiaMNG.prepUpdate()}" ajax="false">
-                                        <f:param name="codEditar" value="#{monografia.id}"/>                              
-                                    </p:commandButton>
-                                </p:column>
-                                <p:column>
-                                    <p:commandButton value="Upload" action="#{monografiaMNG.prepUpdate2()}" ajax="false">
-                                        <f:param name="codEditar" value="#{monografia.id}"/>                              
-                                    </p:commandButton>
-                                </p:column>
-                                <p:column>
-                                    <p:commandButton value="Excluir" title="#{msgs.btRemove}"
-                                                     actionListener="#{monografiaMNG.remove()}"                                             
-                                                     onclick="if (!confirm('#{msgs.msgConfRemove}'))
-                                                                 return false" >
-                                        <f:param name="codExcluir" value="#{monografia.id}"/>
-                                    </p:commandButton>                                
-                                </p:column>                            
-                            </p:dataTable>
-                        </p:panel>
-                    </h:panelGrid> 
-                </h:form>
-            </center>
+    <ui:composition template="/WEB-INF/templates/default.xhtml">
+        <ui:define name="conteudo">           
+            <h:form id="formulario">
+                <p:messages autoUpdate="true"/>
+                <h:panelGrid>
+                    <p:panel header="CADASTRO DE MONOGRAFIA">
+                        <h:form>
+                            <p:growl id="growl" life="2000" />     
+                            <p:commandButton value="Incluir" id="incluir"  action="incluir_monografia"/>                                        
+                        </h:form>                         
+                        <p:dataTable id="sala" value="#{monografiaMNG.lista}" emptyMessage="Não há registros" var="monografia" paginator="true" rows="4" style="width: 820px">
+                            <p:column headerText="Nome" filterBy="#{monografia.lista}">
+                                <h:outputText value="#{monografia.nome}"/>
+                            </p:column>
+                            <p:column headerText="Autor" filterBy="#{monografia.lista}">
+                                <h:outputText value="#{monografia.autor}"/>
+                            </p:column>
+                            <p:column headerText="Descrição">
+                                <h:outputText value="#{monografia.descricao}"/>
+                            </p:column>
+                            <p:column>
+                                <p:commandButton value="Editar" action="#{monografiaMNG.prepUpdate()}" ajax="false">
+                                    <f:param name="codEditar" value="#{monografia.id}"/>                              
+                                </p:commandButton>
+                            </p:column>
+                            <p:column>
+                                <p:commandButton value="Upload" action="#{monografiaMNG.prepUpdate2()}" ajax="false">
+                                    <f:param name="codEditar" value="#{monografia.id}"/>                              
+                                </p:commandButton>
+                            </p:column>
+                            <p:column>
+                                <p:commandButton value="Excluir" title="#{msgs.btRemove}"
+                                                 actionListener="#{monografiaMNG.remove()}"                                             
+                                                 onclick="if (!confirm('#{msgs.msgConfRemove}'))
+                                                             return false" >
+                                    <f:param name="codExcluir" value="#{monografia.id}"/>
+                                </p:commandButton>                                
+                            </p:column>                            
+                        </p:dataTable>
+                    </p:panel>
+                </h:panelGrid> 
+            </h:form>          
         </ui:define>
     </ui:composition>
 </html>
