--- a/TccLulu-war/web/solicitacao.xhtml
+++ b/TccLulu-war/web/solicitacao.xhtml
@@ -5,44 +5,41 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core"> 
-    <ui:composition template="/padrao.xhtml">
-        <ui:define name="centro">
-            <center margin-top='-200' style="top:-500px;position: relative">
+    <ui:composition template="/WEB-INF/templates/default.xhtml">
+        <ui:define name="conteudo">
+            <h:form id="formulario">
+                <p:messages autoUpdate="true"/>
+                <h:panelGrid>
+                    <p:panel header="SOLICITAÇÕES">
+                        <h:form>
+                            <p:growl id="growl" life="2000" />     
+                            <p:commandButton value="Incluir" id="incluir"  action="incluir_solicitacao"/>                            
+                        </h:form>                                 
 
-<h:form id="formulario">
-                    <p:messages autoUpdate="true"/>
-                    <h:panelGrid>
-                        <p:panel header="SOLICITAÇÕES">
-                            <h:form>
-                                <p:growl id="growl" life="2000" />     
-                                <p:commandButton value="Incluir" id="incluir"  action="incluir_solicitacao"/>                            
-                            </h:form>                                 
-                                                
-                            <p:dataTable id="solicitacao" value="#{solicitacaoMNG.lista}" emptyMessage="Não há registros" var="solicitacao" paginator="true" rows="4" style="width: 820px">
-                                <p:column headerText="Curso" filterBy="#{solicitacao.lista}">
-                                    <h:outputText value="#{solicitacao.curso}"/>
-                                </p:column>
-                                <p:column headerText="Justificativa">
-                                    <h:outputText value="#{solicitacao.justificativa}"/>
-                                </p:column>
-                                <p:column>
-                                    <p:commandButton value="Editar" action="#{solicitacaoMNG.prepUpdate()}" ajax="false">
-                                        <f:param name="codEditar" value="#{solicitacao.id}"/>                              
-                                    </p:commandButton>
-                                </p:column>
-                                <p:column>
-                                    <p:commandButton value="Excluir" title="#{msgs.btRemove}"
-                                                     actionListener="#{solicitacaoMNG.remove()}"                                             
-                                                     onclick="if (!confirm('#{msgs.msgConfRemove}'))
-                                                                 return false" >
-                                        <f:param name="codExcluir" value="#{solicitacao.id}"/>
-                                    </p:commandButton>                                
-                                </p:column>                            
-                            </p:dataTable>
-                        </p:panel>
-                    </h:panelGrid> 
-                </h:form>
-            </center>
+                        <p:dataTable id="solicitacao" value="#{solicitacaoMNG.lista}" emptyMessage="Não há registros" var="solicitacao" paginator="true" rows="4" style="width: 820px">
+                            <p:column headerText="Curso" filterBy="#{solicitacao.lista}">
+                                <h:outputText value="#{solicitacao.curso}"/>
+                            </p:column>
+                            <p:column headerText="Justificativa">
+                                <h:outputText value="#{solicitacao.justificativa}"/>
+                            </p:column>
+                            <p:column>
+                                <p:commandButton value="Editar" action="#{solicitacaoMNG.prepUpdate()}" ajax="false">
+                                    <f:param name="codEditar" value="#{solicitacao.id}"/>                              
+                                </p:commandButton>
+                            </p:column>
+                            <p:column>
+                                <p:commandButton value="Excluir" title="#{msgs.btRemove}"
+                                                 actionListener="#{solicitacaoMNG.remove()}"                                             
+                                                 onclick="if (!confirm('#{msgs.msgConfRemove}'))
+                                                             return false" >
+                                    <f:param name="codExcluir" value="#{solicitacao.id}"/>
+                                </p:commandButton>                                
+                            </p:column>                            
+                        </p:dataTable>
+                    </p:panel>
+                </h:panelGrid> 
+            </h:form>          
         </ui:define>
     </ui:composition>
 </html>
