--- a/TccLulu-war/web/incluir_video.xhtml
+++ b/TccLulu-war/web/incluir_video.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">     
     <ui:composition template="/WEB-INF/templates/default.xhtml">
         <ui:define name="conteudo">                
-            <h:form id="formulario">
+            <h:form id="formulario" enctype="multipart/form-data">
                 <p:messages autoUpdate="true"/>
                 <h:panelGrid>
                     <p:panel header="INCLUIR VIDEO">
@@ -17,14 +17,14 @@
                             <h:outputLabel value="Autor"/> 
                             <p:inputText id="autor" value="#{videoMNG.autor}"/>
                             <h:outputLabel value="Descrição"/> 
-                            <p:inputText id="descricao" value="#{videoMNG.descricao}"/>                                
+                            <p:inputText id="descricao" value="#{videoMNG.descricao}"/>         
                             <p:commandButton value="GRAVAR" actionListener="#{videoMNG.save}" ajax="false"/>
                             <p:commandButton value="LIMPAR" type="reset"/>
                             <p:commandButton value="CANCELAR" id="cancelar"  action="video"/> 
                         </h:panelGrid>
                     </p:panel>
                 </h:panelGrid>                             
-            </h:form>          
+            </h:form>            
         </ui:define>
     </ui:composition>
 </html>
