--- a/TccLulu-war/web/menu.xhtml
+++ b/TccLulu-war/web/menu.xhtml
@@ -21,8 +21,8 @@
             </p:submenu>
             <p:submenu label="BIBLOTECA VIRTUAL">
                 <p:menuitem value="Vídeos" outcome="video"/>
-                <p:menuitem value="Monografias" outcome="monografia" />
-                <p:menuitem value="TCC's" />                    
+                <p:menuitem value="Trabalhos acadêmicos" outcome="trabalhos_academicos" />
+                <p:menuitem value="Pesquisas" />                    
             </p:submenu>                       
             <p:submenu label="CONFIGURAÇÕES">
                 <p:menuitem value="Usuários" outcome="usuario"/>
