--- a/TccLulu-war/web/incluir_conteudo.xhtml
+++ b/TccLulu-war/web/incluir_conteudo.xhtml
@@ -1,12 +1,27 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        Hello from Facelets
-    </h:body>
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">     
+    <ui:composition template="/WEB-INF/templates/default.xhtml">
+        <ui:define name="conteudo">                
+            <h:form id="formulario" enctype="multipart/form-data">
+                <p:messages autoUpdate="true"/>
+                <h:panelGrid>
+                    <p:panel header="INCLUIR CONTEUDO">
+                        <h:panelGrid columns="2" id="grid">
+                            <p:growl id="messages" showDetail="true" />                               
+                            <p:fileUpload value="#{conteudoMNG.arquivo}" mode="simple" />
+                            <p:commandButton value="UPLOAD" ajax="false" actionListener="#{conteudoMNG.upload}" />
+                            <p:commandButton value="LIMPAR" type="reset"/>
+                            <p:commandButton value="CANCELAR" id="cancelar"  action="matriz"/> 
+                        </h:panelGrid>
+                    </p:panel>
+                </h:panelGrid>                             
+            </h:form>            
+        </ui:define>
+    </ui:composition>
 </html>
 
