--- a/TccLulu-war/web/menu.xhtml
+++ b/TccLulu-war/web/menu.xhtml
@@ -15,14 +15,14 @@
                 <p:menuitem value="Solicitar Curso" outcome="solicitacao" /> 
             </p:submenu>
             <p:submenu label="CURRÍCULO">
-                <p:menuitem value="Incluir curso externo" outcome="incluir_cursoExterno"/>
+                <p:menuitem value="Incluir curso externo" outcome="curso_externo"/>
                 <p:menuitem value="Relatório de horas" />
                 <p:menuitem value="Certificados" />                    
             </p:submenu>
             <p:submenu label="BIBLOTECA VIRTUAL">
                 <p:menuitem value="Vídeos" outcome="video"/>
                 <p:menuitem value="Trabalhos acadêmicos" outcome="trabalhos_academicos" />
-                <p:menuitem value="Pesquisas" />                    
+                <p:menuitem value="Pesquisas" outcome="pesquisa"/>                    
             </p:submenu>                       
             <p:submenu label="CONFIGURAÇÕES">
                 <p:menuitem value="Usuários" outcome="usuario"/>
