--- a/TccLulu-war/web/incluir_pesquisa.xhtml
+++ b/TccLulu-war/web/incluir_pesquisa.xhtml
@@ -3,23 +3,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">          
+      xmlns:p="http://primefaces.org/ui">         
     <ui:composition template="/WEB-INF/templates/default.xhtml">
         <ui:define name="conteudo">                
             <h:form id="formulario" enctype="multipart/form-data">
                 <p:messages autoUpdate="true"/>
                 <h:panelGrid>
-                    <p:panel header="INCLUIR VIDEO">
+                    <p:panel header="INCLUIR PESQUISA">
                         <h:panelGrid columns="2" id="grid">
                             <h:outputLabel value="Nome"/> 
-                            <p:inputText id="nome" value="#{videoMNG.nome}"/>
+                            <p:inputText id="nome" value="#{pesquisaMNG.nome}"/>
                             <h:outputLabel value="Autor"/> 
-                            <p:inputText id="autor" value="#{videoMNG.autor}"/>
+                            <p:inputText id="autor" value="#{pesquisaMNG.autor}"/>
                             <h:outputLabel value="Descrição"/> 
-                            <p:inputText id="descricao" value="#{videoMNG.descricao}"/>         
-                            <p:commandButton value="GRAVAR" actionListener="#{videoMNG.save}" ajax="false"/>
+                            <p:inputText id="descricao" value="#{pesquisaMNG.descricao}"/>         
+                            <p:commandButton value="GRAVAR" actionListener="#{pesquisaMNG.save}" ajax="false"/>
                             <p:commandButton value="LIMPAR" type="reset"/>
-                            <p:commandButton value="CANCELAR" id="cancelar"  action="video"/> 
+                            <p:commandButton value="CANCELAR" id="cancelar"  action="pesquisa"/> 
                         </h:panelGrid>
                     </p:panel>
                 </h:panelGrid>                             
@@ -27,4 +27,3 @@
         </ui:define>
     </ui:composition>
 </html>
-
