--- a/TccLulu-war/web/menu.xhtml
+++ b/TccLulu-war/web/menu.xhtml
@@ -15,7 +15,7 @@
                 <p:menuitem value="Solicitar Curso" outcome="solicitacao" /> 
             </p:submenu>
             <p:submenu label="CURRÍCULO">
-                <p:menuitem value="Incluir curso externo" outcome="curso_externo"/>
+                <p:menuitem value="Cursos externos" outcome="curso_externo"/>
                 <p:menuitem value="Relatório de horas" />
                 <p:menuitem value="Certificados" />                    
             </p:submenu>
