--- a/TccLulu-war/web/incluir_arquivoCursoExterno.xhtml
+++ b/TccLulu-war/web/incluir_arquivoCursoExterno.xhtml
@@ -3,20 +3,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">     
+      xmlns:p="http://primefaces.org/ui"  >     
     <ui:composition template="/WEB-INF/templates/default.xhtml">
         <ui:define name="conteudo">
             <h:form enctype="multipart/form-data">
                 <p:messages autoUpdate="true"/>
                 <h:panelGrid>
-                    <h:inputHidden value="#{videoMNG.id}"/>
-                    <p:panel header="INCLUIR ARQUIVO VIDEO">
-                        <h:panelGrid columns="2" id="grid">                                                           
-                            <p:fileUpload value="#{videoMNG.arquivo}" mode="simple" />
-                            <p:commandButton value="UPLOAD" ajax="false" actionListener="#{videoMNG.upload}" />
+                    <h:inputHidden value="#{curso_externoMNG.id}"/>
+                    <p:panel header="INCLUIR CURSO EXTERNO">
+                        <h:panelGrid columns="2" id="grid">
+                            <p:growl id="messages" showDetail="true" />                               
+                            <p:fileUpload value="#{curso_externoMNG.arquivo}" mode="simple" />
+                            <p:commandButton value="UPLOAD" ajax="false" actionListener="#{curso_externoMNG.upload()}" />
                             <p:commandButton value="LIMPAR" type="reset"/>
-                            <p:commandButton value="CANCELAR" id="cancelar"  action="video"/> 
+                            <p:commandButton value="CANCELAR" id="cancelar" /> 
                         </h:panelGrid>
                     </p:panel>
                 </h:panelGrid>                             
@@ -24,5 +24,3 @@
         </ui:define>
     </ui:composition>
 </html>
-
-
