--- a/TccLulu-war/web/incluir_arquivoPesquisa.xhtml
+++ b/TccLulu-war/web/incluir_arquivoPesquisa.xhtml
@@ -3,18 +3,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">     
+      xmlns:p="http://primefaces.org/ui">     
     <ui:composition template="/WEB-INF/templates/default.xhtml">
         <ui:define name="conteudo">
             <h:form enctype="multipart/form-data">
                 <p:messages autoUpdate="true"/>
                 <h:panelGrid>
-                    <h:inputHidden value="#{videoMNG.id}"/>
+                    <h:inputHidden value="#{pesquisaMNG.id}"/>
                     <p:panel header="INCLUIR ARQUIVO VIDEO">
                         <h:panelGrid columns="2" id="grid">                                                           
-                            <p:fileUpload value="#{videoMNG.arquivo}" mode="simple" />
-                            <p:commandButton value="UPLOAD" ajax="false" actionListener="#{videoMNG.upload}" />
+                            <p:fileUpload value="#{pesquisaMNG.arquivo}" mode="simple" />
+                            <p:commandButton value="UPLOAD" ajax="false" actionListener="#{pesquisaMNG.upload}" />
                             <p:commandButton value="LIMPAR" type="reset"/>
                             <p:commandButton value="CANCELAR" id="cancelar"  action="video"/> 
                         </h:panelGrid>
@@ -24,5 +23,6 @@
         </ui:define>
     </ui:composition>
 </html>
+
 
 
