--- a/TccLulu-war/web/incluir_cursoExterno.xhtml
+++ b/TccLulu-war/web/incluir_cursoExterno.xhtml
@@ -3,24 +3,42 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"  >     
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">          
     <ui:composition template="/WEB-INF/templates/default.xhtml">
-        <ui:define name="conteudo">
-            <h:form enctype="multipart/form-data">
+        <ui:define name="conteudo">                
+            <h:form id="formulario" enctype="multipart/form-data">
                 <p:messages autoUpdate="true"/>
                 <h:panelGrid>
-                    <h:inputHidden value="#{curso_externoMNG.id}"/>
                     <p:panel header="INCLUIR CURSO EXTERNO">
                         <h:panelGrid columns="2" id="grid">
-                            <p:growl id="messages" showDetail="true" />                               
-                            <p:fileUpload value="#{curso_externoMNG.arquivo}" mode="simple" />
-                            <p:commandButton value="UPLOAD" ajax="false" actionListener="#{curso_externoMNG.upload()}" />
+                            <h:outputLabel value="Colaborador"/> 
+                            <p:selectOneMenu id="pessoa" converter="pessoaConverter" value="#{curso_externoMNG.pessoa}">
+                                <f:selectItems value="#{curso_externoMNG.pessoas}" var ="vPessoa"
+                                               itemLabel="#{vPessoa.nome}"
+                                               itemValue="#{vPessoa}"/>
+                            </p:selectOneMenu>  
+                            <h:outputLabel value="Nome Curso"/> 
+                            <p:inputText id="nome" value="#{curso_externoMNG.nome}"/>
+                            <h:outputLabel value="Quantidade de horas"/> 
+                            <p:inputText id="qtd_horas" value="#{curso_externoMNG.qtd_horas}"/> 
+                            <h:outputLabel value="Data Inicial"/>
+                            <p:inputMask id="data_inicio" value="#{curso_externoMNG.data_inicio}" mask="99/99/9999">
+                                <f:convertDateTime pattern="dd/MM/yyyy"/>
+                            </p:inputMask>
+                            <h:outputLabel value="Data Fim"/>
+                            <p:inputMask id="data_fim" value="#{curso_externoMNG.data_fim}" mask="99/99/9999">
+                                <f:convertDateTime pattern="dd/MM/yyyy"/>
+                            </p:inputMask>                            
+                            <p:commandButton value="GRAVAR" actionListener="#{curso_externoMNG.save}" ajax="false"/>
                             <p:commandButton value="LIMPAR" type="reset"/>
-                            <p:commandButton value="CANCELAR" id="cancelar" /> 
+                            <p:commandButton value="CANCELAR" id="cancelar"  action="curso_externo"/> 
                         </h:panelGrid>
                     </p:panel>
                 </h:panelGrid>                             
-            </h:form>        
+            </h:form>            
         </ui:define>
     </ui:composition>
 </html>
+
+
