--- a/TccLulu-war/web/incluir_pessoa.xhtml
+++ b/TccLulu-war/web/incluir_pessoa.xhtml
@@ -10,7 +10,7 @@
             <h:form id="formulario">
                 <p:messages autoUpdate="true"/>
                 <h:panelGrid>
-                    <p:panel header="INCLUIR PESSOA">
+                    <p:panel header="INCLUIR COLABORADOR">
                         <h:panelGrid columns="2">
                             <h:outputLabel value="Nome"/> 
                             <p:inputText id="nome" value="#{pessoaMNG.nome}"/>
