--- a/TccLulu-war/web/incluir_inscricao.xhtml
+++ b/TccLulu-war/web/incluir_inscricao.xhtml
@@ -12,11 +12,13 @@
                 <h:panelGrid>
                     <p:panel header="Inscrição">
                         <h:panelGrid columns="2">
+                            <h:outputLabel value="Curso"/> 
                             <p:selectOneMenu id="curso" converter="cursoConverter" value="#{inscricaoMNG.curso}">
                                 <f:selectItems value="#{inscricaoMNG.cursos}" var ="vCurso"
                                                itemLabel="#{vCurso.nome}"
                                                itemValue="#{vCurso}"/>
-                            </p:selectOneMenu>                                    
+                            </p:selectOneMenu>
+                            <h:outputLabel value="Colaborador"/> 
                             <p:selectOneMenu id="pessoa" converter="pessoaConverter" value="#{inscricaoMNG.pessoa}">
                                 <f:selectItems value="#{inscricaoMNG.pessoas}" var ="vPessoa"
                                                itemLabel="#{vPessoa.nome}"
