--- a/TccLulu-war/web/menu.xhtml
+++ b/TccLulu-war/web/menu.xhtml
@@ -16,7 +16,7 @@
             </p:submenu>
             <p:submenu label="CURRÍCULO">
                 <p:menuitem value="Cursos externos" outcome="curso_externo"/>
-                <p:menuitem value="Relatório de horas" />
+                <p:menuitem value="Relatório de horas" outcome="relatorio_horas"/>
                 <p:menuitem value="Certificados" />                    
             </p:submenu>
             <p:submenu label="BIBLOTECA VIRTUAL">
