--- a/TccLulu-war/web/menu.xhtml
+++ b/TccLulu-war/web/menu.xhtml
@@ -17,7 +17,7 @@
             <p:submenu label="CURRÍCULO">
                 <p:menuitem value="Cursos externos" outcome="curso_externo"/>
                 <p:menuitem value="Relatório de horas" outcome="relatorio_horas"/>
-                <p:menuitem value="Certificados" />                    
+                <p:menuitem value="Certificados" outcome="certificado"/>                    
             </p:submenu>
             <p:submenu label="BIBLOTECA VIRTUAL">
                 <p:menuitem value="Vídeos" outcome="video"/>
