--- a/TccLulu-war/web/incluir_arquivoCertificado.xhtml
+++ b/TccLulu-war/web/incluir_arquivoCertificado.xhtml
@@ -3,19 +3,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">     
+      xmlns:p="http://primefaces.org/ui"  >     
     <ui:composition template="/WEB-INF/templates/default.xhtml">
         <ui:define name="conteudo">
             <h:form enctype="multipart/form-data">
                 <p:messages autoUpdate="true"/>
                 <h:panelGrid>
-                    <h:inputHidden value="#{trabalhos_academicosMNG.id}"/>
-                    <p:panel header="INCLUIR ARQUIVO VIDEO">
-                        <h:panelGrid columns="2" id="grid">                                                           
-                            <p:fileUpload value="#{trabalhos_academicosMNG.arquivo}" mode="simple" />
-                            <p:commandButton value="UPLOAD" ajax="false" actionListener="#{trabalhos_academicosMNG.upload()}" />
+                    <h:inputHidden value="#{certificadoMNG.id}"/>
+                    <p:panel header="INCLUIR CERTIFICADO">
+                        <h:panelGrid columns="2" id="grid">
+                            <p:growl id="messages" showDetail="true" />                               
+                            <p:fileUpload value="#{certificadoMNG.arquivo}" mode="simple" />
+                            <p:commandButton value="UPLOAD" ajax="false" actionListener="#{certificadoMNG.upload()}" />
                             <p:commandButton value="LIMPAR" type="reset"/>
-                            <p:commandButton value="CANCELAR" id="cancelar"  action="video"/> 
+                            <p:commandButton value="CANCELAR" id="cancelar" /> 
                         </h:panelGrid>
                     </p:panel>
                 </h:panelGrid>                             
