--- a/TccLulu-war/web/matriz.xhtml
+++ b/TccLulu-war/web/matriz.xhtml
@@ -15,7 +15,7 @@
                             <p:growl id="growl" life="1000" />     
                             <p:commandButton value="Incluir" id="incluir"  action="incluir_curso"/>                                            
                         </h:form> 
-                        <p:dataTable id="curso" value="#{cursoMNG.lista}" emptyMessage="Não há registros" var="curso" paginator="true" rows="10" rowKey="#{curso.id}" style="width:900px">
+                        <p:dataTable id="curso" value="#{cursoMNG.lista}" emptyMessage="Não há registros" var="curso" paginator="true" rows="10" rowKey="#{curso.id}" style="width:950px">
                             <p:column style="width:80px" headerText="Data Inicio">
                                 <h:outputText value="#{curso.data_inicio}">
                                     <f:convertDateTime pattern="dd/MM/yyyy"/>
@@ -41,17 +41,17 @@
                             <p:column  headerText="Público alvo" filterBy="#{cursoMNG.lista}">
                                 <h:outputText value="#{curso.pub_alvo}"/>
                             </p:column>
-                            <p:column>
+                            <p:column style="width:80px">
                                 <p:commandButton value="Conteúdo" action="incluir_conteudo" ajax="false">
                                     <f:param name="codEditar" value="#{curso.id}"/>                              
                                 </p:commandButton>
                             </p:column>
-                            <p:column>
+                            <p:column style="width:60px">
                                 <p:commandButton value="Editar" action="#{cursoMNG.prepUpdate()}" ajax="false">
                                     <f:param name="codEditar" value="#{curso.id}"/>                              
                                 </p:commandButton>
                             </p:column>
-                            <p:column>
+                            <p:column style="width:65px">
                                 <p:commandButton value="Excluir" title="#{msgs.btRemove}"
                                                  actionListener="#{cursoMNG.remove()}"                                             
                                                  onclick="if (!confirm('#{msgs.msgConfRemove}'))
